[package]
name = "rustium_api"
version = "0.1.0"
authors = ["Jeziel Lago <jeziellago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0.59"
serde-xml-rs = "0.4.1"
hyper-tls = "0.5.0"
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1.7.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
