[package]
name = "rustium-sample"
version = "0.1.0"
authors = ["Jeziel Lago <jeziellago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustium_api = { path = "../rustium-api" }
warp = "0.2"
hyper-tls = "0.5.0"
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1.7.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
futures = "0.3.15"
futures-channel = "0.3.15"